--- a/trunk/assets/scss/plugin.scss
+++ b/trunk/assets/scss/plugin.scss
@@ -2,7 +2,7 @@
 @import 'settings/globals';
 @import 'components/navbar-mobile';
 
-.button-faq{
+.concordamos-button-faq{
     background-color: var(--wp--preset--color--primary-pure);
     color: var(--wp--preset--color--low-dark);
     border: 3px solid #000;
