add limitation for title in cards

--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -49,6 +49,8 @@
 		line-height: 130%;
 		letter-spacing: -0.24px;
 		color: #111;
+		height: 66px;
+		overflow: hidden;
 		
 		a{
 			text-decoration: none;
