Fix grid of the credits on my votes panel

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -584,6 +584,20 @@
 					}
 				}
 			}
+
+			&.my-votes {
+				.sidebar {
+					.option-voting-grid {
+						&__cell {
+							background-color: #111;
+
+							&.consumed {
+								background-color: #1114;
+							}
+						}
+					}
+				}
+			}
 		}
 
 		.actions {
