ajusta botao de detalhes da votacao

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -627,6 +627,11 @@
 				width: auto;
 			}
 
+			a.primary{
+				padding: 10px 27px 9px;
+				text-transform: none;	
+			}
+
 			.back-link {
 				cursor: pointer;
 				color: #000;
