--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -255,6 +255,7 @@
 			max-width: 1140px;
 			margin-left: auto;
 			margin-right: auto;
+			min-height: inherit;
 
 			@include mobile {
 				display: flex;
@@ -600,6 +601,13 @@
 			}
 		}
 
+		.panel {
+			.actions {
+				margin: 2rem auto;
+				max-width: 1140px;
+			}
+		}
+
 		.actions {
 			align-items: center;
 			display: flex;
@@ -629,7 +637,7 @@
 
 			a.primary{
 				padding: 10px 27px 9px;
-				text-transform: none;	
+				text-transform: none;
 			}
 
 			.back-link {
@@ -790,6 +798,12 @@
 				}
 				.panel-previous-tab, .panel-next-tab {
 					flex: 1;
+
+					&.disabled {
+						img {
+							opacity: .5;
+						}
+					}
 				}
 				.panel-previous-tab{
 					padding-left: 0;
