Fix icon on card of the home #80

--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -69,7 +69,7 @@
 		margin-bottom: 0;
 	}
 
-	.voting-card__staus{
+	.voting-card__status {
 		font-family: 'Inter Tight';
 		margin: 16px 0;
 		color: #000;
