--- a/trunk/assets/scss/admin.scss
+++ b/trunk/assets/scss/admin.scss
@@ -55,3 +55,66 @@
 		}
 	}
 }
+
+// Settings page
+.concordamos-settings {
+	.switch {
+		position: relative;
+		display: inline-block;
+		width: 60px;
+		height: 34px;
+	}
+
+	/* Hide default HTML checkbox */
+	.switch input {
+		opacity: 0;
+		width: 0;
+		height: 0;
+	}
+
+	  /* The slider */
+	.slider {
+		border-radius: 34px;
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #ccc;
+		-webkit-transition: .4s;
+		transition: .4s;
+	}
+
+	.slider:before {
+		border-radius: 50%;
+		position: absolute;
+		content: "";
+		height: 26px;
+		width: 26px;
+		left: 4px;
+		bottom: 4px;
+		background-color: white;
+		-webkit-transition: .4s;
+		transition: .4s;
+	}
+
+	input:checked + .slider {
+		background-color: #2271b1;
+	}
+
+	input:focus + .slider {
+		box-shadow: 0 0 1px #2271b1;
+	}
+
+	input:checked + .slider:before {
+		-webkit-transform: translateX(26px);
+		-ms-transform: translateX(26px);
+		transform: translateX(26px);
+	}
+
+	.help {
+		font-style: italic;
+		margin-top: 1rem;
+	}
+}
