css modais pagina criacao de usuario

--- a/trunk/assets/scss/template-login.scss
+++ b/trunk/assets/scss/template-login.scss
@@ -254,42 +254,53 @@
         text-align: center;
         margin: 50px 0;
     }
-
-    .voting-modal{
-      width: 569px;
-      height: 642px;
-      padding: 0;
-      border-radius: 29px;
-
-      header{
-        align-items: center;
-		background-color: #26A9F9;
-		border-radius: 26px 26px 0 0;
-		display: flex;
-		justify-content: end;
-		padding: 0;
-		.close{
-            background-color: transparent;
-            border: none;
-			padding: 13px 24px 16px;
-			@media(max-width: 782px){
-				padding: 5px 16px 8px;
-			}
-			img{
-				@media(max-width: 782px){
-					max-width: 57%;
-				}
-			}
-		}
-      }
-      main{
-        .privacy-policy-text{
-            width: 569px;
-            height: 642px;
-            overflow-y: scroll;    
-        }
-      }  
-    }
-
+    .voting-modal__wrapper.open{
+        margin-top: -200px;
+        .voting-modal{
+            width: 583px;
+            height: auto;
+            padding: 0;
+            border-radius: 29px;
+      
+            header{
+              align-items: center;
+              background-color: #26A9F9;
+              border-radius: 26px 26px 0 0;
+              display: flex;
+              justify-content: end;
+              padding: 0;
+              .close{
+                  background-color: transparent;
+                  border: none;
+                  padding: 13px 24px 16px;
+                  @media(max-width: 782px){
+                      padding: 5px 16px 8px;
+                  }
+                  img{
+                      @media(max-width: 782px){
+                          max-width: 57%;
+                      }
+                  }
+              }
+            }
+            main{
+              padding-left: 15px;
+              padding-right: 15px;
+              padding-bottom: 20px;
+              .privacy-policy-text, .terms-of-use-text{
+                  width: 553px;
+                  height: 300px !important;
+                  overflow-y: scroll;
+                  
+                  p, ul, h2, ol{
+                    text-align: start !important;
+                  }
+                  h2{
+                    text-transform: inherit;
+                  }    
+                }
+            }  
+        } 
+    }    
 }
 
