--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -1,6 +1,6 @@
 
 .voting-archive-grid{
-	a{		
+	a{
 		&:hover{
 			opacity: inherit;
 		}
@@ -49,7 +49,7 @@
 		color: #111;
 		height: 66px;
 		overflow: hidden;
-		
+
 		a{
 			text-decoration: none;
 			color: #111;
@@ -101,12 +101,12 @@
 			font-weight: bold;
 			line-height: 1;
 			list-style: none;
+			margin: 0 5px 5px 0;
 			padding: 6px;
 			font-size: 12px;
 			color: #111;
 			font-family: 'Inter Tight';
 			font-weight: 700;
-			margin-bottom: 5px;
 		}
 	}
 
