--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -53,7 +53,7 @@ body{
 		margin-top: 30px;
 	}
 
-	.field-text, .field-textarea, .field-checkbox{
+	.field-text, .field-textarea, .field-checkbox, .field-select{
 		label{
 
 			span{
