--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -167,28 +167,23 @@ body{
 	}
 
 	button {
-		&.edit {
+		&.edit, &.trash {
 			background-color: transparent;
-			background-image: url(../../assets/images/edit.svg);
 			background-repeat: no-repeat;
 			background-position: left center;
 			background-size: size(14);
 			border: 0;
 			border-radius: 0;
 			margin-left: size(16);
-			padding: 0 size(16) 0 size(24);
+			padding: 0 0 0 size(24);
+		}
+
+		&.edit {
+			background-image: url(../../assets/images/edit.svg);
 		}
 
 		&.trash {
-			background-color: transparent;
 			background-image: url(../../assets/images/trash.svg);
-			background-repeat: no-repeat;
-			background-position: left center;
-			background-size: size(14);
-			border: 0;
-			border-radius: 0;
-			margin-left: size(16);
-			padding: 0 size(16) 0 size(24);
 		}
 	}
 
