Chore: Rename create voting assets

--- a/trunk/assets/scss/template-create-voting.scss
+++ b/trunk/assets/scss/template-create-voting.scss
@@ -20,7 +20,7 @@ body{
 	margin-right: auto;
 }
 
-#concordamos-voting-form {
+#concordamos-create-voting-form {
 	max-width: 585px;
 	width: 100%;
 	margin-left: auto;
