--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -220,6 +220,27 @@
 				text-transform: uppercase;
 			}
 		}
+
+		.translation-links {
+			margin-top: 30px;
+
+			a.button {
+				background-color: #FFF766;
+				border-radius: 80px;
+				border: 3px solid #000;
+				color: #111;
+				display: flex;
+				font-family: 'Oswald';
+				font-size: 24px;
+				font-weight: medium;
+				letter-spacing: 0.24px;
+				line-height: 130%;
+				padding: 10px 27px 8px;
+				justify-content: center;
+				text-decoration: none;
+				width: fit-content;
+			}
+		}
 	}
 
 	.option-voting-grid {
